Improve office click handler (#5751)
Signed-off-by: Denis Bykhov <bykhov.denis@gmail.com>

--- a/plugins/love-assets/lang/en.json
+++ b/plugins/love-assets/lang/en.json
@@ -44,6 +44,8 @@
     "NoiseCancellation": "Noise cancellation",
     "KnockingLabel": "Knocking",
     "InivitingLabel": "Invite",
+    "Invite": "Invite",
+    "KnockAction": "Knock",
     "NoiseCancellationNotSupported": "Noise cancellation is not supported in this browser",
     "Blur": "Background blur",
     "BlurRadius": "Radius",
