--- a/plugins/love-assets/lang/es.json
+++ b/plugins/love-assets/lang/es.json
@@ -43,7 +43,9 @@
     "YouInivite": "Estás invitando a unirte",
     "NoiseCancellation": "Cancelación de ruido",
     "KnockingLabel": "Tocando",
-    "InivitingLabel": "Invitar",
+    "InivitingLabel": "Invitación",
+    "Invite": "Invitar",
+    "KnockAction": "Golpear",
     "NoiseCancellationNotSupported": "La cancelación de ruido no es compatible con tu navegador",
     "Blur": "Desenfoque de fondo",
     "BlurRadius": "Radio de desenfoque",
