--- a/plugins/love-assets/lang/pt.json
+++ b/plugins/love-assets/lang/pt.json
@@ -43,7 +43,9 @@
     "YouInivite": "Você está convidando para entrar",
     "NoiseCancellation": "Cancelamento de ruído",
     "KnockingLabel": "Batendo",
-    "InivitingLabel": "Convidar",
+    "InivitingLabel": "Convite",
+    "Invite": "Convidar",
+    "KnockAction": "Bater",
     "NoiseCancellationNotSupported": "Seu navegador não suporta cancelamento de ruído",
     "Blur": "Desfoque de fundo",
     "BlurRadius": "Raio de desfoque",
